# inefficient-worldgen

./: .gitignore  README.txt  main.py  pyproject.toml  test_generate.py  test_generation_grid.py  test_real_neighbors.py  test_single_chunk.py  train.sh
checkpoints/: latest.pt
src/inefficient_worldgen/: __main__.py  api.py  chunk_extractor.py  dataset.py  diffusion.py  extract.py  generate.py  palette.py  train.py  unet3d.py  visualize.py
